update tmux and alacritty

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,9 +43,6 @@ set-option -ga terminal-overrides ",*256col*:Tc"
 # Key binding in the status line (bind-key :)
 set-option -g status-keys emacs
 
-# mouse mode
-set-option -g mouse
-
 # Prevent from window renaming
 set-option -g allow-rename off
 
@@ -180,9 +177,6 @@ bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cleared"
 
-# Goyo
-bind-key G set status
-
 set-option -g update-environment \
   "DISPLAY\
   SSH_ASKPASS\
@@ -212,7 +206,7 @@ set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[b
 set-option -g status-interval 60  # redraw status line every 10 seconds
 
 set-option -g pane-border-status bottom
-set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
+set-option -g pane-border-format "#{pane_index} #{pane_current_command} #{pane_title} "
 set-option -g pane-active-border-style "fg=colour253"
 set-option -g pane-border-style "fg=colour243"
 
@@ -297,7 +291,7 @@ set-option -g @resurrect-processes 'ssh watch glances'
 #
 #   currentver="$(tmux -V | awk '{print $2}')"
 #   requiredver="2.8"
-#   if ! [ "$(printf '%s\n' "$requiredver" "$currentver" | sort -V | head -n1)" = "$requiredver" ]; then 
+#   if ! [ "$(printf '%s\n' "$requiredver" "$currentver" | sort -V | head -n1)" = "$requiredver" ]; then
 #       printf "this feature needs tmux version > 2.8"
 #      return
 #   fi
